fix: adjust the z-index values of multiple components so that they appear in the perfect way

--- a/src/pages/concerts/sidebar/sidebar.module.css
+++ b/src/pages/concerts/sidebar/sidebar.module.css
@@ -21,17 +21,17 @@
   width: 100%;
 
   right: 0;
-  z-index: 500;
+  z-index: 1020;
 }
 .sidebarContainer {
   border: none;
   width: 100%;
-  top: 110px;
+  top: 80px;
   outline: 0;
   /* Make the side bar scrollable when it exceeds the viewport height */
   overflow-y: auto;
   scrollbar-width: thin;
-  max-height: 60vh;
+  max-height: 80vh;
   /* Hide the scroll bar */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
@@ -213,7 +213,8 @@
   display: none;
 }
 .backdrop {
-  z-index: 14;
+  height: 100vh;
+  z-index: 500;
   overflow: hidden;
   display: block;
   position: absolute;
@@ -254,6 +255,7 @@
     margin-right: 0;
     width: 325px;
     height: auto;
+    max-height: 60vh;
   }
   .concertDate,
   .concertLocationContainer {
@@ -275,5 +277,6 @@
   }
   .sidebarContainer {
     top: 120px;
+    max-height: 60vh;
   }
 }
